Fix cover being too tall on thin screens

--- a/assets/css/slimeknights.scss
+++ b/assets/css/slimeknights.scss
@@ -136,7 +136,7 @@ em {
     &.book-cover {
         image-rendering: pixelated;
         width: auto;
-        height: min(100%, 100vh);
+        height: min(100%, 100vw);
     }
     /* book pages are a 2:1 width:height ratio, so width is 2x height or height is width/2 */
     &.book-page {
